--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,19 +10,19 @@ if( NOT CMAKE_BUILD_TYPE )
 endif()
 set( CMAKE_CXX_STANDARD 26 )
 set( CMAKE_CXX_STANDARD_REQUIRED ON )
-add_compile_options(-march=native -O3 -mfpmath=sse)
+add_compile_options(-g -march=native -O3 -mfpmath=sse)
 add_compile_options(-DHAVE_GLCOREARB_H=1)
 add_compile_options(-D_FILE_OFFSET_BITS=64)
-add_compile_options(-fdata-sections)
+#add_compile_options(-fdata-sections)
 add_compile_options(-fpermissive)
 add_compile_options(-ffunction-sections)
 add_compile_options(-Wall)
 #add_compile_options(-Wextra)
 add_compile_options(-Wno-pedantic)
 add_compile_options(-Wno-narrowing)
-add_link_options(-Wl,--gc-sections)
+#add_link_options(-Wl,--gc-sections)
 #add_link_options(-Wl,--print-gc-sections)
-add_link_options(-Wl,-s)
+#add_link_options(-Wl,-s)
 
 add_library( ${PROJECT_NAME} INTERFACE )
 target_include_directories( ${PROJECT_NAME} INTERFACE
@@ -34,4 +34,6 @@ install(DIRECTORY ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME} DESTINATION ${CM
 
 add_executable( example examples/example.cpp )
 target_link_libraries( example ${PROJECT_NAME} )
+add_executable( pod3 examples/pod3.cpp )
+target_link_libraries( pod3 ${PROJECT_NAME} )
 
